# exercise4

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  comp_run.sh  genSumVec.c  sumvec_MPI.c  sumvec_comb.c  sumvec_openmp.c
report/: .gitignore  forside.tex  problemset4.aux  problemset4.tex
